<resources>
    <string name="app_name">Drive2Travel</string>
    <string name="name">First name</string>
    <string name="surname">Last name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="eMail">E-mail</string>
    <string name="carModel">Car model</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="registerLabel">Don\'t have an account? Register here</string>
    <string name="loginLabeL">Already have an account? Login here</string>
    <string name="connect_to_network">Connect to internet</string>
    <string name="rsLanguage">Serbian</string>
    <string name="enLanguage">English</string>
    <string name="lang_dialog_title">Language dialog title</string>
    <string name="lang_dialog_message">Language dialog message</string>
    <string name="language_settings">language settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main22">Main22Activity</string>

    <string name="enter_first_name_message">Enter first name</string>
    <string name="enter_last_name_message">Enter last name</string>
    <string name="enter_username_message">Enter username</string>
    <string name="enter_password_message">Enter password</string>

    <string name="error_to_store_driver_message">Error to store driver. Try in a few minutes again</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_driver_main2">DriverMain2</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_driver_main">DriverMain</string>
    <string name="title_activity_add_tour">AddTourActivity</string>
    <string name="title_activity_activity_driver_main">ActivityDriverMain</string>
    <string name="title_activity_activity_show_tours">ActivityShowTours</string>
    <string name="title_activity_activity_tour_details">ActivityTourDetails</string>

    <string name="title_activity_passanger_main">Home</string>
    <string name="title_menu_passanger_my_transport">My transport</string>
    <string name="title_menu_passanger_transport">Transport</string>
    <string name="title_menu_passanger_search_transport">Search transport</string>
    <string name="title_menu_passanger_settings">Profile settings</string>

    <string name="title_activity_search_main">Search ride</string>
    <string name="start_location_activity_search_main">Start location</string>
    <string name="stop_location_activity_search_main">Stop location</string>
    <string name="time_label_activity_search_main">Time: </string>
    <string name="date_label_activity_search_main">Date: </string>
    <string name="distance_label_activity_search_main">Distance: </string>
    <string name="search_error_message">Please provide all data!</string>
    <string name="search_by_data">Search by data</string>
    <string name="search_by_distance">Search by distance</string>

    <string name="title_activity_tour_details">Tour details</string>

    <string name="title_menu_friendship">Friendship</string>

    <string name="friendship_activity_title">Friendship</string>
    <string name="bluetooth_start_message">Bluetooth is currently off. Please turn on bluetooth !</string>
    <string name="bluetooth_search_start_message">Started searching for nearby devices!</string>
    <string name="bluetooth_nearby_title">Nearby devices</string>
    <string name="bluetooth_no_devices">There is no nearby devices!</string>
    <string name="bluetooth_search_finish_message">Finished searching for nearby devices!</string>

    <!-- BLUETOOTH -->
    <string name="bluetooth_async_task_client_connecting">Connecting</string>
    <string name="bluetooth_async_task_client_connected">Connected</string>
    <string name="bluetooth_async_task_client_sending_request">Sending request</string>
    <string name="bluetooth_async_task_client_friendship_ok">U are now friends</string>
    <string name="bluetooth_async_task_client_friendship_already">U are already friends</string>
    <string name="bluetooth_async_task_client_friendship_cancel">Canceling</string>

    <string name="bluetooth_async_task_title">Friendship request</string>

    <!-- ROUTE URLs-->
    <string name="servers_url">http://location</string>
    <string name="fetch_tour_data">/tour/search</string>
    <string name="friend_with">/user/friend</string>
    <string name="add_friend">/user/add_friend</string>
    <string name="update_tour_rank">/tour/update_rank</string>
    <string name="store_user">/user/register</string>
    <string name="login_user">/user/login</string>
    <string name="update_user_location">/user/update_location</string>
    <string name="remove_friend">/user/remove_friend</string>

    <string name="title_activity_tour_map">Tour map</string>
    <string name="title_activity_drivers_main">DriversMainActivity</string>

</resources>
