<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.elfak.mosis.drivetotravel.drivetotravel1.Activities.Register">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/registerScrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/tvRegName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRegName"
        android:layout_below="@+id/tvRegName"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:id="@+id/tvRegSurname"
        android:layout_below="@+id/etRegName"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRegSurname"
        android:layout_below="@+id/tvRegSurname"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/tvRegUsername"
        android:layout_below="@+id/etRegSurname"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRegUsername"
        android:layout_below="@+id/tvRegUsername"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/tvRegPassword"
        android:layout_below="@+id/etRegUsername"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRegPassword"
        android:layout_below="@+id/tvRegPassword"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginLabeL"
        android:id="@+id/gotoLoginLabel"
        android:layout_below="@+id/btnRegister"
        android:layout_centerHorizontal="true" />

            <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerButton"
        android:id="@+id/btnRegister"
        android:layout_below="@+id/radioBtnGroupRegisterActivity" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/etRegPassword"
                android:layout_alignParentStart="true"
                android:id="@+id/radioBtnGroupRegisterActivity">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Driver"
                    android:id="@+id/radioButtonRegisterActivityDriver"
                    android:layout_below="@+id/etRegPassword"
                    android:layout_centerHorizontal="true"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Passenger"
                    android:id="@+id/radioButtonRegisterActivityPassenger"
                    android:layout_alignTop="@+id/radioButtonRegisterActivityDriver"
                    android:layout_toEndOf="@+id/radioButtonRegisterActivityDriver" />
            </RadioGroup>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
