<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.elfak.mosis.drivetotravel.drivetotravel1.Activities.Login">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/tvUsername"
        android:layout_marginTop="47dp"
        android:layout_marginLeft="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/etLoginActivityUsername" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLoginActivityUsername"
        android:layout_below="@+id/tvUsername"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/tvPassword"
        android:layout_below="@+id/etLoginActivityUsername"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLoginActivityPassword"
        android:layout_below="@+id/tvPassword"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:inputType="textPassword" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:id="@+id/loginBtn"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/etLoginActivityPassword"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerLabel"
        android:id="@+id/registerLabel"
        android:layout_marginTop="67dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/testUser_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Test passenger"
        android:id="@+id/testUser_button"
        android:layout_below="@+id/loginBtn"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Test driver"
        android:id="@+id/testDriver_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/testUser_button" />

</RelativeLayout>